--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 spring.application.name=translationmemory
 spring.jackson.serialization.INDENT_OUTPUT=true
+spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
+springdoc.api-docs.path=/api-docs
+logging.level.web=DEBUG
