--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,14 @@
 spring.application.name=translationmemory
+#spring.datasource.url=jdbc:h2:~/workspace/rest-translation-memory/h2db;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=dbuser
+#spring.datasource.password=dbpass
 spring.jackson.serialization.INDENT_OUTPUT=true
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
 springdoc.api-docs.path=/api-docs
 logging.level.web=DEBUG
+management.endpoints.web.exposure.include=*
+management.endpoints.access.default=unrestricted
+management.endpoint.health.show-details=always
+management.endpoint.health.show-components=always
+management.health.db.enabled=true
