--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,9 @@ spring.jackson.serialization.INDENT_OUTPUT=true
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
 springdoc.api-docs.path=/api-docs
 logging.level.web=DEBUG
+logging.level.org.springframework=DEBUG
+logging.level.org.springframework.web=DEBUG
+logging.level.javax.validation=DEBUG
 logging.file.name=logs/translation-memory.log
 management.endpoints.web.exposure.include=*
 management.endpoints.access.default=unrestricted
