--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,20 @@
 spring.application.name=translationmemory
+#spring.sql.init.mode=always
+spring.sql.init.mode=never
+spring.sql.init.platform=oracle
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521/xepdb1
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+spring.datasource.username=tmx_user
+spring.datasource.password=tmx_password
 #spring.datasource.url=jdbc:h2:~/workspace/rest-translation-memory/h2db;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 #spring.datasource.driverClassName=org.h2.Driver
 #spring.datasource.username=dbuser
 #spring.datasource.password=dbpass
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=2
+spring.datasource.hikari.idle-timeout=30000
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.max-lifetime=1800000
 spring.jackson.serialization.INDENT_OUTPUT=true
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
 springdoc.api-docs.path=/api-docs
